# imp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  adsr_params.hpp  archive.hpp  circular_rw_buffer.hpp  constants.hpp  ecs.hpp  graph.hpp  main.cpp  math.cpp  math.hpp  synth.hpp  time_state.hpp  voice.cpp  voice.hpp  wavetable.hpp
src/ecs/: Cargo.toml  attempt.hpp  mysave.sav  test.sav
src/synthesis/: adsr_params.hpp  graph.hpp  voice.cpp  voice.hpp
