[package]
name = "ecs"
version = "0.1.0"
authors = ["Martin Grönlund <3044707+martingronlund@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# serde_cbor = "0.10.2"
